# customer-tracing

./: .env.example  .gitignore  CLAUDE.md  DOCKER.md  LICENSE  QUICKSTART.md  README.md  deploy.sh  docker-compose.prod.yaml  docker-compose.yaml  start-dev.sh
backend/: .dockerignore  .env.example  Cargo.toml  Dockerfile
backend/migrations/: 001_create_users.sql  002_create_customers.sql  003_create_customer_tracks.sql  004_add_customer_group.sql
backend/src/: cli.rs  config.rs  database.rs  lib.rs  main.rs  migration.rs  routes.rs
backend/src/entities/: customer.rs  customer_group.rs  customer_track.rs  mod.rs  next_action.rs  user.rs
backend/src/handlers/: auth.rs  customer.rs  customer_track.rs  mod.rs
backend/src/middleware/: auth.rs
backend/src/services/: auth_service.rs  mod.rs  track_service.rs
backend/src/utils/: jwt.rs  mod.rs  password.rs  validation.rs
frontend/: .dockerignore  .env.development  .env.example  Dockerfile  components.d.ts  env.d.ts  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.vue  vite-env.d.ts
frontend/src/components/: CustomerCard.vue  CustomerFormModal.vue  TrackFormModal.vue  TrackingTimeline.vue
frontend/src/router/: index.ts
frontend/src/stores/: auth.ts  customer.ts  track.ts
frontend/src/types/: auth.ts  common.ts  customer.ts  index.ts  track.ts
frontend/src/utils/: request.ts
frontend/src/views/: CustomerDetail.vue  CustomerList.vue  Login.vue  NotFound.vue
nginx/: nginx.conf
nginx/conf.d/: default.conf
