[package]
name = "customer-tracker"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8"
axum-extra = { version = "0.10.1", features = ["typed-header"] }
sea-orm = { version = "1.0", features = ["sqlx-sqlite", "runtime-tokio-rustls", "macros"] }
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "sqlite", "chrono"] }
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4.0", features = ["derive"] }
jsonwebtoken = "9.0"
bcrypt = "0.17.0"
tracing = "0.1"
tracing-subscriber = "0.3"
dotenv = "0.15"
anyhow = "1.0"
thiserror = "2.0.12"
tower = "0.5.2"
tower-http = { version = "0.6.6", features = ["cors", "fs"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
regex = "1.0"
